--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,8 @@
-/*  your css code here. If applicable */
+.modal-content{
+	width:500px;
+	border:1px solid purple;
+	display:flex;
+	flex-direction:column;
+	justify-content:center;
+	align-items:center
+}
