--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,36 @@
-.modal-content{
-	width:500px;
-	border:1px solid purple;
-	display:flex;
-	flex-direction:column;
-	justify-content:center;
-	align-items:center
-}
-.modal{
-	display:none;
-}
+.modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow:   
+ auto;
+            background-color: rgba(0,   
+ 0, 0, 0.4);
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+        }
+
+        .close-modal   
+ {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .close-modal:hover,
+        .close-modal:focus {
+            color: #000;   
+
+        }
